# stepper-control

./: .gitignore  CMakeLists.txt  Makefile  README.md  accel.gnumeric  load
inspiration/: LICENSE  avr.c
ld/: stm32.ld
lib/CMSIS/: LICENSE
src/: button.c  button.h  delay.c  delay.h  hardware.c  hardware.h  interrupts.c  interrupts.h  leds.c  leds.h  main.c  motor.c  motor.h  platform.c  platform.h  stm32f10x_conf.h  timer.c  timer.h  usart.c  usart.h
test/: avr.c  sqrt.c
